# Aiogram-Telegram-Bot-for-Async-Django-eCommerce-Platform

./: README.md  config.py  main.py  pyproject.toml
api/structure/: models.py
api_client/: __init__.py  auth_client.py  openrouter_client.py  product_client.py  user_client.py
api_client/exceptions/: common.py
keyboards/inline_keyboards/: products.py  users.py
middlewares/: auth_middleware.py  signature_middleware.py
redis_client/: __init__.py  connection.py  conversation_history.py
renderers/: product_renderer.py
routers/: __init__.py  commons.py  generic_router.py
routers/auth/: __init__.py  login.py  logout.py  register.py
routers/auth/utils/: commons.py
routers/handlers/: __init__.py  users.py
routers/products/: __init__.py  all_products.py  user_products.py
routers/staff/: __init__.py  commons.py  filters.py  users.py
routers/staff/utils/: user_info.py  users.py
utils/: __init__.py  decorators.py  messaging.py
validators/: user_validators.py
